[project]
name = "ragebaiter"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex Jercan",email = "jercan_alex27@yahoo.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "ollama (>=0.5.3,<0.6.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "py-cord[voice] (>=2.6.1,<3.0.0)",
    "audioop-lts (>=0.2.2,<0.3.0)",
    "torch (>=2.8.0,<3.0.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "numba (>=0.61.2,<0.62.0)",
    "openai-whisper (>=20250625,<20250626)",
    "piper-tts (>=1.3.0,<2.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
